# web-browser-mcp-server

./: .gitignore  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt  smithery.yaml
.github/workflows/: tests.yml
src/mcp_web_browser/: __init__.py  cli.py  config.py  server.py  uvx_config.py
src/web_browser_mcp_server/: config.py  server.py
tests/: test_server.py
