[project]
name = "web-browser-mcp"
version = "0.1.0"
description = "A Minimum Control Program (MCP) server for web browsing capabilities using BeautifulSoup4"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4==4.12.2",
    "requests==2.31.0",
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "pydantic==2.6.0",
    "aiohttp==3.9.1",
    "python-dotenv==1.0.0",
    "pydantic-settings==2.1.0",
    "click==8.1.7"
]

[project.optional-dependencies]
test = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "httpx==0.26.0",
    "pluggy==1.3.0",
    "aioresponses==0.7.6"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_web_browser"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
python = "3.11"