[project]
name = "web-browser-mcp-server"
version = "0.1.2"
description = "Transform your AI applications with advanced web browsing capabilities through this Model Context Protocol (MCP) server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.2",
    "requests==2.31.0",
    "fastapi>=0.110.0",
    "uvicorn==0.27.0",
    "pydantic>=2.8.0",
    "aiohttp==3.9.1",
    "python-dotenv==1.0.0",
    "pydantic-settings>=2.1.0",
    "click==8.1.7",
    "mcp>=1.0.0",
]
license = { text = "MIT" }  # Fixed: license needs to be a table with 'text' key

[project.urls]
Repository = "https://github.com/blazickjp/web-browser-mcp-server"

[project.optional-dependencies]
test = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "httpx>=0.27.0",
    "pluggy==1.3.0",
    "aioresponses==0.7.6"
]
[project.scripts]
web-browser-mcp-server = "web_browser_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_web_browser"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"